Import of DAGOLDEN/MooseX-Types-Path-Class-MoreCoercions-0.002 from CPAN.
gitpan-cpan-distribution: MooseX-Types-Path-Class-MoreCoercions
gitpan-cpan-version:      0.002
gitpan-cpan-path:         DAGOLDEN/MooseX-Types-Path-Class-MoreCoercions-0.002.tar.gz
gitpan-cpan-author:       DAGOLDEN
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,15 +1,16 @@
 ---
-abstract: 'Coerce stringable objects to work with MooseX::Types::Path::Class'
+abstract: 'More powerful coercion than MooseX::Types::Path::Class'
 author:
   - 'David Golden <dagolden@cpan.org>'
 build_requires:
   File::Find: 0
   File::Temp: 0
+  File::pushd: 0
   Test::More: 0.96
 configure_requires:
   ExtUtils::MakeMaker: 6.30
 dynamic_config: 0
-generated_by: 'Dist::Zilla version 4.300009, CPAN::Meta::Converter version 2.120630'
+generated_by: 'Dist::Zilla version 4.300014, CPAN::Meta::Converter version 2.120630'
 license: apache
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -26,7 +27,7 @@ no_index:
 provides:
   MooseX::Types::Path::Class::MoreCoercions:
     file: lib/MooseX/Types/Path/Class/MoreCoercions.pm
-    version: 0.001
+    version: 0.002
 requires:
   Moose: 0
   MooseX::Types: 0
@@ -40,4 +41,4 @@ resources:
   bugtracker: http://rt.cpan.org/Public/Dist/Display.html?Name=MooseX-Types-Path-Class-MoreCoercions
   homepage: https://github.com/dagolden/moosex-types-path-class-morecoercions
   repository: https://github.com/dagolden/moosex-types-path-class-morecoercions.git
-version: 0.001
+version: 0.002
